feat(contact page/frappe):Contact Page

--- a/frappe/www/contact.html
+++ b/frappe/www/contact.html
@@ -10,9 +10,9 @@
 	}
 </style>
 <div class="contact-content">
-	{% if introduction %}
+	{% if contact_us_settings.introduction %}
 	<div>
-		{{ introduction or "" }}<br>
+		{{ contact_us_settings.introduction or "" }}<br>
 	</div>
 	{% endif %}
 	<div class="row">
@@ -21,8 +21,8 @@
 				style="display: none;">&nbsp;</p>
 			<div class="form-group">
 				<select name="subject" class="form-control">
-				{% if query_options -%}
-					{% for option in query_options.split("\n") -%}
+				{% if contact_us_settings.query_options -%}
+					{% for option in contact_us_settings.query_options.split("\n") -%}
 					<option value="{{ option }}">{{ option }}</option>
 					{%- endfor %}
 				{% else %}
@@ -41,36 +41,33 @@
 				<button class="btn btn-primary btn-send">{{ _("Send") }}</button>
 			</div>
 		</div>
-		{% if address_title %}
+		{% if contact_us_settings.address_title %}
 		<div class="col-md-3 col-md-offset-1 address"
 				itemscope itemtype="http://schema.org/PostalAddress">
-			<h4 style="margin-top: 0px;"><i class="fa fa-map-marker"></i> {{ address_title }}</h4>
-			{% if address_line1 %}
-				<span itemprop="streetAddress">{{ address_line1 }}</span><br>
+			<h4 style="margin-top: 0px;"><i class="fa fa-map-marker"></i> {{ contact_us_settings.address_title }}</h4>
+			{% if contact_us_settings.address_line1 %}
+				<span itemprop="streetAddress">{{ contact_us_settings.address_line1 }}</span><br>
 			{% endif %}
-			{% if address_line2 %}
-				<span itemprop="streetAddress">{{ address_line2 }}</span><br>
+			{% if contact_us_settings.address_line2 %}
+				<span itemprop="streetAddress">{{ contact_us_settings.address_line2 }}</span><br>
 			{% endif %}
-			{% if city %}
-				<span itemprop="addressLocality">{{ city }}</span><br>
+			{% if contact_us_settings.city %}
+				<span itemprop="addressLocality">{{ contact_us_settings.city }}</span><br>
 			{% endif %}
-			{% if state %}
-				<span itemprop="addressRegion">{{ state }}</span><br>
+			{% if contact_us_settings.state %}
+				<span itemprop="addressRegion">{{ contact_us_settings.state }}</span><br>
 			{% endif %}
-			{% if pincode %}
-				<span itemprop="postalCode">{{ pincode }}</span><br>
+			{% if contact_us_settings.pincode %}
+				<span itemprop="postalCode">{{ contact_us_settings.pincode }}</span><br>
 			{% endif %}
-			{% if country %}
-				<span itemprop="addressCountry">{{ country }}</span><br><br>
+			{% if contact_us_settings.country %}
+				<span itemprop="addressCountry">{{ contact_us_settings.country }}</span><br><br>
 			{% endif %}
-			{% if phone %}
-				<i class='fa fa-phone'></i> <span itemprop="telephone">{{ phone }}</span><br>
+			{% if contact_us_settings.phone %}
+				<i class='fa fa-phone'></i> <span itemprop="telephone">{{ contact_us_settings.phone }}</span><br>
 			{% endif %}
-			{% if email_id %}
-				<i class='fa fa-envelope'></i> <span itemprop="email">{{ email_id }}</span><br>
-			{% endif %}
-			{% if skype %}
-				<i class='fa fa-skype'></i> <span itemprop="email">{{ skype }}</span><br>
+			{% if contact_us_settings.email_id %}
+				<i class='fa fa-envelope'></i> <span itemprop="email">{{ contact_us_settings.email_id }}</span><br>
 			{% endif %}
 
 		</div>
