fix(Print): Center and PDF as primary button

--- a/frappe/www/printview.html
+++ b/frappe/www/printview.html
@@ -23,7 +23,7 @@
 		</a>
 	</div>
 	<div class="print-format-gutter">
-		<div class="print-format">
+		<div class="print-format" style="margin: 0 auto;">
 			{{ body }}
 		</div>
 	</div>
