--- a/frappe/public/js/frappe/ui/filters/edit_filter.html
+++ b/frappe/public/js/frappe/ui/filters/edit_filter.html
@@ -1,26 +1,23 @@
 <div class="filter-box">
-	<div class="visible-xs flex justify-flex-end">
-		<span class="remove-filter">
-			{{ __("Remove") }}
-		</span>
-	</div>
-	<div class="list_filter row">
-		<div class="fieldname-select-area col-sm-4 ui-front form-group"></div>
-		<div class="col-sm-3 form-group">
+	<div class="list_filter row align-items-center">
+		<div class="fieldname-select-area col-sm-4 ui-front form-group mb-0"></div>
+		<div class="col-sm-2 form-group mb-0">
 			<select class="condition form-control input-xs">
 				{% for condition in conditions %}
 				<option value="{{condition[0]}}">{{ condition[1] }}</option>
 				{% endfor %}
 			</select>
 		</div>
-		<div class="col-sm-4 form-group">
+		<div class="col-sm-4 form-group mb-0">
 			<div class="filter-field"></div>
-			<div class="text-muted small filter-description"></div>
 		</div>
-		<div class="remove-filter col-sm-1 text-center hidden-xs">
-			<svg class="icon icon-sm">
-				<use href="#icon-close" class="close"></use>
-			</svg>
+		<div class="col-sm-2">
+			<div class="filter-actions">
+				<a class="set-filter-and-run btn btn-sm btn-primary">
+					<span>{%= __("Apply") %}</span></a>
+				<a class="btn btn-default btn-sm remove-filter ml-2">
+					<span>{%= __("Remove") %}</span></a>
+			</div>
 		</div>
 	</div>
 </div>
