--- a/frappe/public/js/frappe/ui/page.html
+++ b/frappe/public/js/frappe/ui/page.html
@@ -37,13 +37,18 @@
 				<div class="standard-actions flex">
 					<span class="page-icon-group hide hidden-xs hidden-sm"></span>
 					<div class="menu-btn-group hide">
-						<button type="button" class="btn btn-default icon-btn" data-toggle="dropdown" aria-expanded="false">
+						<button type="button" class="btn btn-default" data-toggle="dropdown" aria-expanded="false">
 							<span>
 								<span class="menu-btn-group-label">
-									<svg class="icon icon-sm">
+									<svg class="icon icon-sm hidden-xs" style="margin-left: -4px;">
+										<use href="#icon-dot-vertical">
+										</use>
+									</svg>
+									<svg class="icon icon-sm visible-xs">
 										<use href="#icon-dot-horizontal">
 										</use>
 									</svg>
+									<span class="hidden-xs actions-btn-group-label" style="margin-left: -2px;">{%= __("Menu") %}</span>
 								</span>
 							</span>
 						</button>
@@ -54,7 +59,7 @@
 						<button type="button" class="btn btn-primary btn-sm" data-toggle="dropdown" aria-expanded="false">
 							<span>
 								<span class="hidden-xs actions-btn-group-label">{%= __("Actions") %}</span>
-								<svg class="icon icon-xs">
+								<svg class="icon icon-sm">
 									<use href="#icon-select">
 									</use>
 								</svg>
